Java 8 friendliness in pokemon & randomizer & romentry classes