@@ -127,10 +127,10 @@ public class StarterRandomizer extends Randomizer {
         List<Type> typesInOrder;
         if(romHandler.generationOfPokemon() <= 2) {
             //the order is Fire, Water, Grass
-            typesInOrder = new ArrayList<>(List.of(Type.FIRE, Type.WATER, Type.GRASS));
+            typesInOrder = Arrays.asList(Type.FIRE, Type.WATER, Type.GRASS);
         } else {
             //the order is Grass, Fire, Water
-            typesInOrder = new ArrayList<>(List.of(Type.WATER, Type.GRASS, Type.FIRE));
+            typesInOrder = Arrays.asList(Type.WATER, Type.GRASS, Type.FIRE);
         }
 
         return chooseStartersOfTypes(choosableByType, typesInOrder);
@@ -207,7 +207,7 @@ public class StarterRandomizer extends Randomizer {
                 }
             }
             if (noPick) {
-                throw new RandomizationException("No valid starter of type " + Type + " found!");
+                throw new RandomizationException("No valid starter of type " + type + " found!");
             }
         }
 
@@ -358,7 +358,7 @@ public class StarterRandomizer extends Randomizer {
                         // It is "reverse" direction because it's used for starter generation,
                         // and the starter list expects type triangles to be this way
                         // (it's [Fire, Water, Grass] in vanilla)
-                        List<Type> triangle = new ArrayList<>(List.of(typeThree, typeTwo, typeOne));
+                        List<Type> triangle = Arrays.asList(typeThree, typeTwo, typeOne);
                         typeTriangles.add(triangle);
                     }
                 }
